--- a/notebook/my_noteBook.ipynb
+++ b/notebook/my_noteBook.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 11,
    "id": "053fca68-c4b8-4111-88de-afd0258393d4",
    "metadata": {
     "tags": []
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 23,
    "id": "37f2935a-d95c-4641-b230-3188dabd1eef",
    "metadata": {
     "tags": []
@@ -392,224 +392,18 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>DateTime</th>\n",
-       "      <th>Temperature</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "      <th>general diffuse flows</th>\n",
-       "      <th>diffuse flows</th>\n",
-       "      <th>Zone 1 Power Consumption</th>\n",
-       "      <th>Zone 2 Power Consumption</th>\n",
-       "      <th>Zone 3 Power Consumption</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1/1/2017 0:00</td>\n",
-       "      <td>6.559</td>\n",
-       "      <td>73.8</td>\n",
-       "      <td>0.083</td>\n",
-       "      <td>0.051</td>\n",
-       "      <td>0.119</td>\n",
-       "      <td>34055.69620</td>\n",
-       "      <td>16128.87538</td>\n",
-       "      <td>20240.96386</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1/1/2017 0:10</td>\n",
-       "      <td>6.414</td>\n",
-       "      <td>74.5</td>\n",
-       "      <td>0.083</td>\n",
-       "      <td>0.070</td>\n",
-       "      <td>0.085</td>\n",
-       "      <td>29814.68354</td>\n",
-       "      <td>19375.07599</td>\n",
-       "      <td>20131.08434</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1/1/2017 0:20</td>\n",
-       "      <td>6.313</td>\n",
-       "      <td>74.5</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>0.100</td>\n",
-       "      <td>29128.10127</td>\n",
-       "      <td>19006.68693</td>\n",
-       "      <td>19668.43373</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1/1/2017 0:30</td>\n",
-       "      <td>6.121</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>0.083</td>\n",
-       "      <td>0.091</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>28228.86076</td>\n",
-       "      <td>18361.09422</td>\n",
-       "      <td>18899.27711</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1/1/2017 0:40</td>\n",
-       "      <td>5.921</td>\n",
-       "      <td>75.7</td>\n",
-       "      <td>0.081</td>\n",
-       "      <td>0.048</td>\n",
-       "      <td>0.085</td>\n",
-       "      <td>27335.69620</td>\n",
-       "      <td>17872.34043</td>\n",
-       "      <td>18442.40964</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52411</th>\n",
-       "      <td>12/30/2017 23:10</td>\n",
-       "      <td>7.010</td>\n",
-       "      <td>72.4</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>0.040</td>\n",
-       "      <td>0.096</td>\n",
-       "      <td>31160.45627</td>\n",
-       "      <td>26857.31820</td>\n",
-       "      <td>14780.31212</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52412</th>\n",
-       "      <td>12/30/2017 23:20</td>\n",
-       "      <td>6.947</td>\n",
-       "      <td>72.6</td>\n",
-       "      <td>0.082</td>\n",
-       "      <td>0.051</td>\n",
-       "      <td>0.093</td>\n",
-       "      <td>30430.41825</td>\n",
-       "      <td>26124.57809</td>\n",
-       "      <td>14428.81152</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52413</th>\n",
-       "      <td>12/30/2017 23:30</td>\n",
-       "      <td>6.900</td>\n",
-       "      <td>72.8</td>\n",
-       "      <td>0.086</td>\n",
-       "      <td>0.084</td>\n",
-       "      <td>0.074</td>\n",
-       "      <td>29590.87452</td>\n",
-       "      <td>25277.69254</td>\n",
-       "      <td>13806.48259</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52414</th>\n",
-       "      <td>12/30/2017 23:40</td>\n",
-       "      <td>6.758</td>\n",
-       "      <td>73.0</td>\n",
-       "      <td>0.080</td>\n",
-       "      <td>0.066</td>\n",
-       "      <td>0.089</td>\n",
-       "      <td>28958.17490</td>\n",
-       "      <td>24692.23688</td>\n",
-       "      <td>13512.60504</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52415</th>\n",
-       "      <td>12/30/2017 23:50</td>\n",
-       "      <td>6.580</td>\n",
-       "      <td>74.1</td>\n",
-       "      <td>0.081</td>\n",
-       "      <td>0.062</td>\n",
-       "      <td>0.111</td>\n",
-       "      <td>28349.80989</td>\n",
-       "      <td>24055.23167</td>\n",
-       "      <td>13345.49820</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>52416 rows × 9 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "               DateTime  Temperature  Humidity  Wind Speed  \\\n",
-       "0         1/1/2017 0:00        6.559      73.8       0.083   \n",
-       "1         1/1/2017 0:10        6.414      74.5       0.083   \n",
-       "2         1/1/2017 0:20        6.313      74.5       0.080   \n",
-       "3         1/1/2017 0:30        6.121      75.0       0.083   \n",
-       "4         1/1/2017 0:40        5.921      75.7       0.081   \n",
-       "...                 ...          ...       ...         ...   \n",
-       "52411  12/30/2017 23:10        7.010      72.4       0.080   \n",
-       "52412  12/30/2017 23:20        6.947      72.6       0.082   \n",
-       "52413  12/30/2017 23:30        6.900      72.8       0.086   \n",
-       "52414  12/30/2017 23:40        6.758      73.0       0.080   \n",
-       "52415  12/30/2017 23:50        6.580      74.1       0.081   \n",
-       "\n",
-       "       general diffuse flows  diffuse flows  Zone 1 Power Consumption  \\\n",
-       "0                      0.051          0.119               34055.69620   \n",
-       "1                      0.070          0.085               29814.68354   \n",
-       "2                      0.062          0.100               29128.10127   \n",
-       "3                      0.091          0.096               28228.86076   \n",
-       "4                      0.048          0.085               27335.69620   \n",
-       "...                      ...            ...                       ...   \n",
-       "52411                  0.040          0.096               31160.45627   \n",
-       "52412                  0.051          0.093               30430.41825   \n",
-       "52413                  0.084          0.074               29590.87452   \n",
-       "52414                  0.066          0.089               28958.17490   \n",
-       "52415                  0.062          0.111               28349.80989   \n",
-       "\n",
-       "       Zone 2 Power Consumption  Zone 3 Power Consumption  \n",
-       "0                   16128.87538               20240.96386  \n",
-       "1                   19375.07599               20131.08434  \n",
-       "2                   19006.68693               19668.43373  \n",
-       "3                   18361.09422               18899.27711  \n",
-       "4                   17872.34043               18442.40964  \n",
-       "...                         ...                       ...  \n",
-       "52411               26857.31820               14780.31212  \n",
-       "52412               26124.57809               14428.81152  \n",
-       "52413               25277.69254               13806.48259  \n",
-       "52414               24692.23688               13512.60504  \n",
-       "52415               24055.23167               13345.49820  \n",
-       "\n",
-       "[52416 rows x 9 columns]"
+       "'DateTime'"
       ]
      },
+     "execution_count": 23,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "#let's display the 5 first lines of our  dataset\n",
-    "display(df_energy)"
+    "df_energy.columns.values[0]"
    ]
   },
   {
@@ -1597,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 17,
    "id": "04314051-7cc0-44f5-904e-1f0770f04d9a",
    "metadata": {
     "tags": []
@@ -1605,7 +1399,7 @@
    "outputs": [],
    "source": [
     "#File energy path\n",
-    "file_energy = \"./Datasets/Tetuan_City_power_consumption.csv\"\n",
+    "file_energy = \"../Datasets/Tetuan_City_power_consumption.csv\"\n",
     "\n",
     "# Format dateTime columns\n",
     "df_energy = pd.read_csv(file_energy)\n",
@@ -1614,7 +1408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 18,
    "id": "c3b5a60d-3521-4146-9ae6-138664884c64",
    "metadata": {
     "tags": []
@@ -1833,7 +1627,7 @@
        "[52416 rows x 9 columns]"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,6 +1636,237 @@
     "df_energy\n",
     "df_energy2=df_energy\n",
     "df_energy2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "daff648d-a463-4dbf-900d-e3ec34dde399",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DateTime</th>\n",
+       "      <th>Temperature</th>\n",
+       "      <th>Humidity</th>\n",
+       "      <th>Wind Speed</th>\n",
+       "      <th>general diffuse flows</th>\n",
+       "      <th>diffuse flows</th>\n",
+       "      <th>Zone 1 Power Consumption</th>\n",
+       "      <th>Zone 2 Power Consumption</th>\n",
+       "      <th>Zone 3 Power Consumption</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017-01-01 00:00:00</td>\n",
+       "      <td>6.559</td>\n",
+       "      <td>73.80</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>0.051</td>\n",
+       "      <td>0.119</td>\n",
+       "      <td>34055.69620</td>\n",
+       "      <td>16128.87538</td>\n",
+       "      <td>20240.96386</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017-01-01 00:10:00</td>\n",
+       "      <td>6.414</td>\n",
+       "      <td>74.50</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>0.070</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>29814.68354</td>\n",
+       "      <td>19375.07599</td>\n",
+       "      <td>20131.08434</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017-01-01 00:20:00</td>\n",
+       "      <td>6.313</td>\n",
+       "      <td>74.50</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.062</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>29128.10127</td>\n",
+       "      <td>19006.68693</td>\n",
+       "      <td>19668.43373</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017-01-01 00:30:00</td>\n",
+       "      <td>6.121</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>0.091</td>\n",
+       "      <td>0.096</td>\n",
+       "      <td>28228.86076</td>\n",
+       "      <td>18361.09422</td>\n",
+       "      <td>18899.27711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017-01-01 00:40:00</td>\n",
+       "      <td>5.921</td>\n",
+       "      <td>75.70</td>\n",
+       "      <td>0.081</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>27335.69620</td>\n",
+       "      <td>17872.34043</td>\n",
+       "      <td>18442.40964</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8492</th>\n",
+       "      <td>2017-02-28 23:20:00</td>\n",
+       "      <td>13.550</td>\n",
+       "      <td>66.05</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>0.044</td>\n",
+       "      <td>0.159</td>\n",
+       "      <td>32503.72881</td>\n",
+       "      <td>19944.07295</td>\n",
+       "      <td>19699.77889</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8493</th>\n",
+       "      <td>2017-02-28 23:30:00</td>\n",
+       "      <td>13.440</td>\n",
+       "      <td>66.89</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>0.100</td>\n",
+       "      <td>31930.16949</td>\n",
+       "      <td>19316.71733</td>\n",
+       "      <td>19103.51759</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8494</th>\n",
+       "      <td>2017-02-28 23:40:00</td>\n",
+       "      <td>13.370</td>\n",
+       "      <td>66.89</td>\n",
+       "      <td>0.081</td>\n",
+       "      <td>0.051</td>\n",
+       "      <td>0.141</td>\n",
+       "      <td>30740.33898</td>\n",
+       "      <td>18827.96353</td>\n",
+       "      <td>18478.31156</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8495</th>\n",
+       "      <td>2017-02-28 23:50:00</td>\n",
+       "      <td>13.310</td>\n",
+       "      <td>67.29</td>\n",
+       "      <td>0.085</td>\n",
+       "      <td>0.055</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>29843.38983</td>\n",
+       "      <td>18474.16413</td>\n",
+       "      <td>18020.98492</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8496</th>\n",
+       "      <td>2017-03-01 00:00:00</td>\n",
+       "      <td>12.980</td>\n",
+       "      <td>84.60</td>\n",
+       "      <td>0.094</td>\n",
+       "      <td>0.048</td>\n",
+       "      <td>0.122</td>\n",
+       "      <td>29069.61702</td>\n",
+       "      <td>18190.24390</td>\n",
+       "      <td>17616.77419</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8497 rows × 9 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                DateTime  Temperature  Humidity  Wind Speed  \\\n",
+       "0    2017-01-01 00:00:00        6.559     73.80       0.083   \n",
+       "1    2017-01-01 00:10:00        6.414     74.50       0.083   \n",
+       "2    2017-01-01 00:20:00        6.313     74.50       0.080   \n",
+       "3    2017-01-01 00:30:00        6.121     75.00       0.083   \n",
+       "4    2017-01-01 00:40:00        5.921     75.70       0.081   \n",
+       "...                  ...          ...       ...         ...   \n",
+       "8492 2017-02-28 23:20:00       13.550     66.05       0.082   \n",
+       "8493 2017-02-28 23:30:00       13.440     66.89       0.083   \n",
+       "8494 2017-02-28 23:40:00       13.370     66.89       0.081   \n",
+       "8495 2017-02-28 23:50:00       13.310     67.29       0.085   \n",
+       "8496 2017-03-01 00:00:00       12.980     84.60       0.094   \n",
+       "\n",
+       "      general diffuse flows  diffuse flows  Zone 1 Power Consumption  \\\n",
+       "0                     0.051          0.119               34055.69620   \n",
+       "1                     0.070          0.085               29814.68354   \n",
+       "2                     0.062          0.100               29128.10127   \n",
+       "3                     0.091          0.096               28228.86076   \n",
+       "4                     0.048          0.085               27335.69620   \n",
+       "...                     ...            ...                       ...   \n",
+       "8492                  0.044          0.159               32503.72881   \n",
+       "8493                  0.048          0.100               31930.16949   \n",
+       "8494                  0.051          0.141               30740.33898   \n",
+       "8495                  0.055          0.167               29843.38983   \n",
+       "8496                  0.048          0.122               29069.61702   \n",
+       "\n",
+       "      Zone 2 Power Consumption  Zone 3 Power Consumption  \n",
+       "0                  16128.87538               20240.96386  \n",
+       "1                  19375.07599               20131.08434  \n",
+       "2                  19006.68693               19668.43373  \n",
+       "3                  18361.09422               18899.27711  \n",
+       "4                  17872.34043               18442.40964  \n",
+       "...                        ...                       ...  \n",
+       "8492               19944.07295               19699.77889  \n",
+       "8493               19316.71733               19103.51759  \n",
+       "8494               18827.96353               18478.31156  \n",
+       "8495               18474.16413               18020.98492  \n",
+       "8496               18190.24390               17616.77419  \n",
+       "\n",
+       "[8497 rows x 9 columns]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_sub_data = df_energy.loc[(df_energy.DateTime >= \"2017-01-01\") & (df_energy.DateTime <= \"2017-03-01\")]\n",
+    "df_sub_data"
    ]
   },
   {
